# automata-model

./: .gitignore  README.md  automata-model.cabal  hello.txt  output.txt  package.yaml  simple.txt  toDFA_simple.txt
app/: Main.hs
input/: dfa-complex_expected_complement.txt  dfa-simple.txt  dfa.txt  final_pump-s1-fixed.txt  final_pump-s1.txt  final_pump-s2.txt  input2.txt  m1_accompanying-string.txt  m1_dfa-simple.txt  m1_nfa-simple_expected_to-dfa.txt  m2_basic.txt  m2_basic_expected_to-dfa.txt  m2_intersection.txt  m2_intersection_expected_intersection-complement-dfa.txt  nfa-simple_expected_to-dfa.txt
output/: 1208487250_Milestone1_Dp.txt
src/: AutomatonTypes.hs  DFA.hs  FiniteAutomata.hs  Intersection.hs  Main.hs  Output.hs  Parser.hs  ShortestString.hs
