name:                automata-model
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/automata-model#readme
license:             BSD3
license-file:        LICENSE
author:              Eric Arellano
maintainer:          ecarell1@asu.edu
copyright:           2018 Eric Arellano
category:            Desktop
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable automata-model
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5